remove UseConcMarkSweepGC